# keyviewer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile.linux  Dockerfile.macos-cross  README.ko.md  README.md  build-portable.ps1  build-tauri.ps1  build-tauri.sh  build_all.ps1  build_exe.ps1  check-all.ps1  check-all.sh  convert-icon.ps1  docker-compose.yml  docker-test.ps1  docker-test.sh  installer.ps1  installer.py  onedir.ps1  organize-builds.ps1  portable.ps1  prev-control.html  prev-overlay.html  requirements.txt  run.ps1  setup_main.py  start-tauri.ps1  test-local.ps1  test-local.sh  test-quick.ps1  렌.json
.cargo/: config.toml
.githooks/: pre-push
.github/: copilot-instructions.md
.github/workflows/: build-and-release.yml  tauri-build.yml  test.yml
app/: launcher.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GUIDE.md  LOCAL-TESTING.md  MACOS-SIGNING.md  MIGRATION.md  README.en.md  README.ko.md  README.md  REMOTE-MAC.md  USER-GUIDE.md
scripts/: build-macos-signed.sh  ci-linux-build.sh  mac-remote.ps1  mac-remote.sh  macos-cert-renew.sh  macos-cert-setup.sh
server/: main.py
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/src/: keyboard.rs  main.rs  server.rs  settings.rs  state.rs  window_info.rs
ui/: chip.css  control.css  control.html  index.html  launcher.css  obs-local-template.html  overlay.css  overlay.html  permissions.html
ui/js/: chip-preview.js  cloud-auth.js  gradient-editor.js  utils.js
web/: control.html  index.html
worker/: index.js
