[package]
name = "keyviewer"
version = "1.1.0"
description = "Key Input Monitoring Tool with Web Interface"
authors = ["KeyViewer Team"]
license = "MIT"
repository = "https://github.com/Ba-koD/keyviewer"
edition = "2021"

[[bin]]
name = "KBQV"
path = "src/main.rs"

# Prevent console window on Windows in release builds
[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools", "unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rdev = "0.5"
once_cell = "1.19"
parking_lot = "0.12"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tower = "0.5"
dirs = "5.0"
open = "5.0"
single-instance = "0.3"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_Input_KeyboardAndMouse",
] }

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
core-foundation = "0.10"
core-graphics = "0.24"
objc = "0.2"

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another for optimization
lto = true        # Enable link-time optimization
opt-level = "z"   # Optimize for size
strip = true      # Strip symbols from binary

# Fast CI build profile (use with: cargo build --profile ci-release)
[profile.ci-release]
inherits = "release"
lto = "thin"          # Faster than full LTO
codegen-units = 16    # Parallel compilation
opt-level = 2         # Balance speed/size

